changes block  friends
